Change build so that object files are collected into libhector.a before compiling the final executable.
This change will make it easier to use hector in another code (such as
GCAM).  One consequence of this change is that any code that should
*not* be included when hector is linked into another code
(e.g. main.cpp) should go in the top-level source directory.
Conversely, code that is always necessary for hector to function
(generally everything that isn't main.cpp) must go in the
subdirectories.

--- a/source/Makefile
+++ b/source/Makefile
@@ -2,7 +2,7 @@ CXX	= g++
 CXXFLAGS = -g  $(INCLUDES) $(OPTFLAGS) $(CXXEXTRA) $(CXXPROF) -MMD
 INCLUDES = -I$(BOOSTROOT) -I$(HDRDIR) -I$(GSLINC)
 OPTFLAGS = -O3
-LDFLAGS	 = $(CXXPROF) -L$(GSLLIB)
+LDFLAGS	 = $(CXXPROF) -L$(GSLLIB) -L.
 
 export CXXFLAGS OPTFLAGS
 
@@ -45,8 +45,8 @@ OBJS	= $(SRCS:.cpp=.o)
 DEPS	= $(SRCS:.cpp=.d)
 
 ## default target
-hector: subdirs $(OBJS)
-	$(CXX) $(LDFLAGS) -o hector $(OBJS) build/*.o -lgsl -lgslcblas -lm
+hector: libhector.a $(OBJS)
+	$(CXX) $(LDFLAGS) -o hector $(OBJS) -lhector -lgsl -lgslcblas -lm
 
 
 ## Targets that do not literally name files
@@ -58,6 +58,9 @@ test: testing
 testing: INCLUDES += -I$(GTINC)
 testing: gtest components topdir
 	$(MAKE) -C testing hector-unit-tests
+
+libhector.a: subdirs
+	ar ru libhector.a build/*.o
 
 subdirs: build $(DIRS)
 
