Add some input files for coupled runs.
For the time being gcam_emissions.csv has emissions through 2100.
Once we're able to push emissions into the model while it's running,
we'll delete everything after 2010.

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 # make dependency files
 *.d
 
+# emacs backup files
+*~
+
 # Compiled Dynamic libraries
 *.so
 *.dylib
@@ -30,3 +33,4 @@ output/*.*
 
 # Project files
 project_files/*.*
+*.kdev4
