Add and test some more examples of sending emissions into the core.
We now have both types of CO2, a couple of halocarbons (they all work
the same), and all of the other gasses for which their components
currently accept emissions data.

--- a/input/coupling-test.ini
+++ b/input/coupling-test.ini
@@ -94,7 +94,8 @@ eps_spinup=0.001	; spinup tolerance (drift), Pg C yr-1
 [so2] 
 S0= 53841.2         ; historical sulphate from year 2000 (Ggrams)
 SN=42000			; natural sulfur emissions (Ggrams)
-SO2_emissions = csv:input/emissions/RCP45_emissions.csv
+;SO2_emissions = csv:input/emissions/RCP45_emissions.csv
+SO2_emissions = csv:input/emissions/gcam_emissions.csv
 ;SV = csv:input/emissions/volcanic_RF.csv
 
 [methane]
@@ -140,11 +141,11 @@ S=3.0 				; equilibrium climate sensitivity for 2xCO2, degC
 
 [bc]
 ; need to be in kg/yr
-BC_emissions=csv:input/emissions/RCP45_emissions.csv
+BC_emissions=csv:input/emissions/gcam_emissions.csv
 
 [oc]
 ; need to be in kg/yr
-OC_emissions=csv:input/emissions/RCP45_emissions.csv
+OC_emissions=csv:input/emissions/gcam_emissions.csv
 
 ; --------------------------------------------------------------------------
 ; Halocarbons in kt/yr
@@ -155,7 +156,7 @@ OC_emissions=csv:input/emissions/RCP45_emissions.csv
 tau = 50000.0 		; lifetime in years
 rho = 0.00008 		; radiative efficiencies W/m2/ppt
 H0=35.0,pptv		; preindustrial concentration, pptv
-CF4_emissions = csv:input/emissions/RCP45_emissions.csv
+CF4_emissions = csv:input/emissions/gcam_emissions.csv
 molarMass=88.0043	; grams
 
 [C2F6_halocarbon]
@@ -325,7 +326,7 @@ molarMass=259.8
 [HCF22_halocarbon]
 tau= 12.0
 rho= 0.0002
-HCF22_emissions= csv:input/emissions/RCP45_emissions.csv
+HCF22_emissions= csv:input/emissions/gcam_emissions.csv
 molarMass=86.45
 ;ni=1
 ;FC=0.35
