Changes to ensure consistency in the O3 component:
* D_ATMOSPHERIC_{NOX,CO,NMVOC} -> D_EMISSIONS_{NOX,CO,NMVOC}, since
  these are emissions, not concentrations.
* Change the unit on NOX from Tg-NOX to Tg-NO, since that is what is
  in our input data files.
* Changes as necessary in the ini and emissions files, since some of
  the labels for these gasses have changed.

--- a/input/hector_rcp60.ini
+++ b/input/hector_rcp60.ini
@@ -110,13 +110,13 @@ Ma = csv:input/concentrations/RCP6_ch4n2o_conc.csv
 [ozone]
 enabled=1
 ;NOX0=0                              ;pre-industrial value
-NOX=csv:input/emissions/RCP6_emissions.csv   ; emissions time series
+NOX_emissions=csv:input/emissions/RCP6_emissions.csv   ; emissions time series
 
 ;CO0=0                              ;pre-industrial value
-CO=csv:input/emissions/RCP6_emissions.csv   ; emissions time series
+CO_emissions=csv:input/emissions/RCP6_emissions.csv   ; emissions time series
 
 ;NMVOC0=0                              ;pre-industrial value
-NMVOC=csv:input/emissions/RCP6_emissions.csv   ; emissions time series
+NMVOC_emissions=csv:input/emissions/RCP6_emissions.csv   ; emissions time series
 
 Ma = csv:input/concentrations/RCP6_ch4n2o_conc.csv
 ;molarMass = 16.04       ; grams
