--- a/input/hector_rcp85.ini
+++ b/input/hector_rcp85.ini
@@ -99,13 +99,24 @@ SO2_emissions = csv:input/emissions/RCP85_emissions.csv
 ;SV = csv:input/emissions/volcanic_RF.csv
 
 [methane]
-M0=722  					;721.8941 preindustrial methane, ppbv ; assumed to be 700 ppbv IPCC, 2001 Table 6.1
-;UC_CH4=2.746				; Tg(CH4)/ppb unit conversion between emissions and concentrations
+M0 = 722  				;721.8941 preindustrial methane, ppbv ; assumed to be 700 ppbv IPCC, 2001 Table 6.1
+Tsoil = 160 			; CH4 loss to soil (years)
+Tstrat = 120            ; CH4 loss to stratosphere (years)
+UC_CH4 = 2.78			; Tg(CH4)/ppb unit conversion between emissions and concentrations
+CH4N = 300				; Natural CH4 emissions (Ggrams)
 
-Ma = csv:input/concentrations/RCP85_ch4n2o_conc.csv
-;CH4_emissions=csv:input/emissions/RCP85_emissions.csv   ; concentration time series
-;molarMass = 16.04       ; grams
-;tau = 10				; lifetime in years  oucher et al 2009
+CH4_emissions=csv:input/emissions/RCP85_emissions.csv     ; concentration time series
+
+[OH]
+NOX_emissions=csv:input/emissions/RCP85_emissions.csv     ; emissions time series
+CO_emissions=csv:input/emissions/RCP85_emissions.csv      ; emissions time series
+NMVOC_emissions=csv:input/emissions/RCP85_emissions.csv   ; emissions time series
+
+TOH0 = 6.6				; inital OH lifetime (years)
+CNOX = 0.0042			; coefficent for NOX
+CCO = -0.000105			; coefficent for CO
+CNMVOC = -0.000315		; coefficent for NMVOC
+CCH4 = -0.32			; coefficent for CH4
 
 [ozone]
 enabled=1
