updates to gitnore
deleted VS files

--- a/.gitignore
+++ b/.gitignore
@@ -35,54 +35,9 @@ DerivedData/
 
 # Project files
 project_files/*.*
-Release
-ipch
-Run Test Cases
-Debug
-libs
+project_files/visual_studio/
+libs/
 
-rcp85
-output
-output
-rcp85
-op_ch.R
-quicklook.R
-output.csv
-outputstream_rcp85.csv
-restart.ini
-.Rhistory
-Other_models
-TAS
-NBP
-BGS_2014
-CMIP5
-Historical
-IPCC
-MAGICC
-MAGICC6
-historical_OC.csv
-BATS_DIC.csv
-LeQuere_co2_sinks.csv
-ESTOC_pco2.csv
-ESTOC_dic.csv
-ESTOC_ph.csv
-BATS_CO3.csv
-BATS_ArOmega.csv
-BATS_CaOmega.csv
-BATS_PCO2.csv
-BATS_chemistry.xlsx
-Takahashi_fgco2.csv
-HOTS_ArOmega.csv
-HOTS_CaOmega.csv
-HOTS_DIC.csv
-historical_BC.csv
-Other_models
-Hector_models_fgco2
-TAS
-NBP
-Hector_models_tas
-Hector_models_nbp
-Hector_models_ph
-ESM_CO2
-CCSM4_temp.csv
-CCSM4_pco2.csv
+#output
+output/*.csv
+output/*.ini
