--- a/input/hector_rcp85.ini
+++ b/input/hector_rcp85.ini
@@ -98,7 +98,8 @@ SN=42000			; natural sulfur emissions (Ggrams)
 SO2_emissions = csv:input/emissions/RCP85_emissions.csv
 ;SV = csv:input/emissions/volcanic_RF.csv
 
-[methane]
+[CH4]
+
 M0 = 722  				;721.8941 preindustrial methane, ppbv ; assumed to be 700 ppbv IPCC, 2001 Table 6.1
 Tsoil = 160 			; CH4 loss to soil (years)
 Tstrat = 120            ; CH4 loss to stratosphere (years)
@@ -108,6 +109,7 @@ CH4N = 300				; Natural CH4 emissions (Ggrams)
 CH4_emissions=csv:input/emissions/RCP85_emissions.csv     ; concentration time series
 
 [OH]
+
 NOX_emissions=csv:input/emissions/RCP85_emissions.csv     ; emissions time series
 CO_emissions=csv:input/emissions/RCP85_emissions.csv      ; emissions time series
 NMVOC_emissions=csv:input/emissions/RCP85_emissions.csv   ; emissions time series
@@ -119,27 +121,26 @@ CNMVOC = -0.000315		; coefficent for NMVOC
 CCH4 = -0.32			; coefficent for CH4
 
 [ozone]
-enabled=1
-;NOX0=0                              ;pre-industrial value
+enabled=0
 NOX_emissions=csv:input/emissions/RCP85_emissions.csv   ; emissions time series
-
-;CO0=0                              ;pre-industrial value
 CO_emissions=csv:input/emissions/RCP85_emissions.csv   ; emissions time series
-
-;NMVOC0=0                              ;pre-industrial value
 NMVOC_emissions=csv:input/emissions/RCP85_emissions.csv   ; emissions time series
 
-Ma = csv:input/concentrations/RCP85_ch4n2o_conc.csv
 ;molarMass = 16.04       ; grams
 ;tau = 10				; lifetime in years  oucher et al 2009
 
-[nitrous]
-N0= 272.9596				; preindustrial nitrous oxide, ppbv
-;UC_N2O=4.8				; Tg(N2O)/ppb unit conversion between emissions and concentrations
-Na = csv:input/concentrations/RCP85_ch4n2o_conc.csv
-;N2O_emissions=csv:input/emissions/RCP85_emissions.csv   ; concentration time series
+[N2O]
+N0= 272.9596			; preindustrial nitrous oxide, ppbv
+UC_N2O=4.8				; Tg(N2O)/ppb unit conversion between emissions and concentrations
+TN2O0 = 120             ; Initial Lifetime of N2O
+
+N2ON_emissions[1765] = 11  ; Natural Emissions in 1765 
+N2ON_emissions[2000] = 8   ; Natural Emissions in 2000 
+N2ON_emissions[2300] = 8   ; Natural Emissions in 2300 
+
+N2O_emissions=csv:input/emissions/RCP85_emissions.csv   ; emissions time series
 ;molarMass = 44.01     ; grams
-;tau = 120;
+
 
 [forcing]
 baseyear=1750			; when to start reporting; by definition, all F=0 in this year
