more changes to n2o/ch4/oh/o3

--- a/input/hector_rcp85.ini
+++ b/input/hector_rcp85.ini
@@ -9,7 +9,7 @@ max_spinup=5000		; maximum steps allowed for spinup (default=2000)
 [onelineocean]
 enabled=0			; putting 'enabled=0' will disable any component
 ;output=0			; uncomment this line to disable this component's output
-ocean_c=38000, Pg C
+;ocean_c=38000, Pg C
 
 [ocean]
 enabled=1			; putting 'enabled=0' will disable any component			
@@ -99,7 +99,7 @@ SO2_emissions = csv:input/emissions/RCP85_emissions.csv
 ;SV = csv:input/emissions/volcanic_RF.csv
 
 [CH4]
-
+enabled=1
 M0 = 722  				;721.8941 preindustrial methane, ppbv ; assumed to be 700 ppbv IPCC, 2001 Table 6.1
 Tsoil = 160 			; CH4 loss to soil (years)
 Tstrat = 120            ; CH4 loss to stratosphere (years)
@@ -109,7 +109,7 @@ CH4N = 300				; Natural CH4 emissions (Ggrams)
 CH4_emissions=csv:input/emissions/RCP85_emissions.csv     ; concentration time series
 
 [OH]
-
+enabled=1
 NOX_emissions=csv:input/emissions/RCP85_emissions.csv     ; emissions time series
 CO_emissions=csv:input/emissions/RCP85_emissions.csv      ; emissions time series
 NMVOC_emissions=csv:input/emissions/RCP85_emissions.csv   ; emissions time series
@@ -130,6 +130,7 @@ NMVOC_emissions=csv:input/emissions/RCP85_emissions.csv   ; emissions time serie
 ;tau = 10				; lifetime in years  oucher et al 2009
 
 [N2O]
+enabled=0
 N0= 272.9596			; preindustrial nitrous oxide, ppbv
 UC_N2O=4.8				; Tg(N2O)/ppb unit conversion between emissions and concentrations
 TN2O0 = 120             ; Initial Lifetime of N2O
