CH4 emissions to concentrations

--- a/input/hector_rcp85.ini
+++ b/input/hector_rcp85.ini
@@ -99,17 +99,17 @@ SO2_emissions = csv:input/emissions/RCP85_emissions.csv
 ;SV = csv:input/emissions/volcanic_RF.csv
 
 [CH4]
-enabled=0
-M0 = 722  				;721.8941 preindustrial methane, ppbv ; assumed to be 700 ppbv IPCC, 2001 Table 6.1
+enabled=1
+M0 = 653  				;721.8941 preindustrial methane, ppbv ; assumed to be 700 ppbv IPCC, 2001 Table 6.1
 Tsoil = 160 			; CH4 loss to soil (years)
 Tstrat = 120            ; CH4 loss to stratosphere (years)
 UC_CH4 = 2.78			; Tg(CH4)/ppb unit conversion between emissions and concentrations
-CH4N = 300				; Natural CH4 emissions (Ggrams)
+CH4N = 300				; Natural CH4 emissions (Tgrams)
 
 CH4_emissions=csv:input/emissions/RCP85_emissions.csv     ; concentration time series
 
 [OH]
-enabled=0
+enabled=1
 NOX_emissions=csv:input/emissions/RCP85_emissions.csv     ; emissions time series
 CO_emissions=csv:input/emissions/RCP85_emissions.csv      ; emissions time series
 NMVOC_emissions=csv:input/emissions/RCP85_emissions.csv   ; emissions time series
