O3 converted to a time series

--- a/input/hector_rcp85.ini
+++ b/input/hector_rcp85.ini
@@ -122,6 +122,7 @@ CCH4 = -0.32			; coefficent for CH4
 
 [ozone]
 enabled=1
+PO3 = 30.0 				; preindustrial O3 concentration
 NOX_emissions=csv:input/emissions/RCP85_emissions.csv   ; emissions time series
 CO_emissions=csv:input/emissions/RCP85_emissions.csv   ; emissions time series
 NMVOC_emissions=csv:input/emissions/RCP85_emissions.csv   ; emissions time series
