Changed BC and OC units to Tg/yr
This is more consistent with GCAM output

--- a/input/hector_rcp26.ini
+++ b/input/hector_rcp26.ini
@@ -9,7 +9,7 @@ max_spinup=5000		; maximum steps allowed for spinup (default=2000)
 [onelineocean]
 enabled=0			; putting 'enabled=0' will disable any component
 ;output=0			; uncomment this line to disable this component's output
-ocean_c=38000, Pg C
+;ocean_c=38000, Pg C
 
 [ocean]
 enabled=1			; putting 'enabled=0' will disable any component			
