--- a/input/hector_rcp60.ini
+++ b/input/hector_rcp60.ini
@@ -9,7 +9,7 @@ max_spinup=5000		; maximum steps allowed for spinup (default=2000)
 [onelineocean]
 enabled=0			; putting 'enabled=0' will disable any component
 ;output=0			; uncomment this line to disable this component's output
-ocean_c=38000, Pg C
+;ocean_c=38000, Pg C
 
 [ocean]
 enabled=1			; putting 'enabled=0' will disable any component			
@@ -106,13 +106,13 @@ Tstrat = 120            ; CH4 loss to stratosphere (years)
 UC_CH4 = 2.78			; Tg(CH4)/ppb unit conversion between emissions and concentrations
 CH4N = 300				; Natural CH4 emissions (Tgrams)
 
-CH4_emissions=csv:input/emissions/RCP60_emissions.csv     ; concentration time series
+CH4_emissions=csv:input/emissions/RCP6_emissions.csv     ; concentration time series
 
 [OH]
 enabled=1
-NOX_emissions=csv:input/emissions/RCP60_emissions.csv     ; emissions time series
-CO_emissions=csv:input/emissions/RCP60_emissions.csv      ; emissions time series
-NMVOC_emissions=csv:input/emissions/RCP60_emissions.csv   ; emissions time series
+NOX_emissions=csv:input/emissions/RCP6_emissions.csv     ; emissions time series
+CO_emissions=csv:input/emissions/RCP6_emissions.csv      ; emissions time series
+NMVOC_emissions=csv:input/emissions/RCP6_emissions.csv   ; emissions time series
 
 TOH0 = 6.6				; inital OH lifetime (years)
 CNOX = 0.0042			; coefficent for NOX
@@ -123,9 +123,9 @@ CCH4 = -0.32			; coefficent for CH4
 [ozone]
 enabled=1
 PO3 = 30.0 				; preindustrial O3 concentration
-NOX_emissions=csv:input/emissions/RCP60_emissions.csv   ; emissions time series
-CO_emissions=csv:input/emissions/RCP60_emissions.csv   ; emissions time series
-NMVOC_emissions=csv:input/emissions/RCP60_emissions.csv   ; emissions time series
+NOX_emissions=csv:input/emissions/RCP6_emissions.csv   ; emissions time series
+CO_emissions=csv:input/emissions/RCP6_emissions.csv   ; emissions time series
+NMVOC_emissions=csv:input/emissions/RCP6_emissions.csv   ; emissions time series
 
 ;molarMass = 16.04       ; grams
 ;tau = 10				; lifetime in years  oucher et al 2009
@@ -140,7 +140,7 @@ N2ON_emissions[1765] = 11  ; Natural Emissions in 1765
 N2ON_emissions[2000] = 8   ; Natural Emissions in 2000 
 N2ON_emissions[2300] = 8   ; Natural Emissions in 2300 
 
-N2O_emissions=csv:input/emissions/RCP60_emissions.csv   ; emissions time series
+N2O_emissions=csv:input/emissions/RCP6_emissions.csv   ; emissions time series
 ;molarMass = 44.01     ; grams
 
 [forcing]
