testing SO2 fix

--- a/input/hector_rcp45.ini
+++ b/input/hector_rcp45.ini
@@ -30,7 +30,7 @@ k = 0.2            ; ocean heat uptake efficiency  (W/m2/K)
 [simpleNbox]
 ; Initial (preindustrial) carbon pools
 ;atmos_c=750.071
-atmos_c=588.071			; Pg C in CO2, from Murakami (2010)
+atmos_c=588.071			; Pg C in CO2, from Murakami et al., (2010)
 ;						  could also specify as "C0=276", in ppmv
 
 ; If using biomes (e.g. boreal.veg_c ) must have data for all pools*biomes
@@ -121,7 +121,7 @@ CCH4 = -0.32			; coefficent for CH4
 
 [ozone]
 enabled=1
-PO3 = 30.0 				; preindustrial O3 concentration
+PO3 = 25.0 				; preindustrial O3 concentration
 NOX_emissions=csv:input/emissions/RCP45_emissions.csv   ; emissions time series
 CO_emissions=csv:input/emissions/RCP45_emissions.csv   ; emissions time series
 NMVOC_emissions=csv:input/emissions/RCP45_emissions.csv   ; emissions time series
@@ -131,7 +131,7 @@ NMVOC_emissions=csv:input/emissions/RCP45_emissions.csv   ; emissions time serie
 
 [N2O]
 enabled=1
-N0= 272.9596			; preindustrial nitrous oxide, ppbv
+N0= 265.0   			; preindustrial nitrous oxide, ppbv
 UC_N2O=4.8				; Tg(N2O)/ppb unit conversion between emissions and concentrations
 TN2O0 = 132             ; Initial Lifetime of N2O
 
