--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,21 @@ libs/
 #output
 output/*.csv
 output/*.ini
+input/emissions/for_kate.csv
+input/for_kate.ini
+output/comparison_data/AGU_poster.csv
+output/comparison_data
+output/output
+output/*.png
+output/*.pdf
+output/*.csv
+output/rcp85
+output/rcp45
+output/.Rhistory
+output/figures.R
+output/logs/figures.R.txt
+output/op_ch.R
+output/rcp45_rcp85/011.ocean.ph_ll.csv
+output/rcp45_rcp85/011.ocean.ph_ll.pdf
+output/rcp45_rcp85/012.ocean.ph_ll.csv
+output/rcp45_rcp85/012.ocean.ph_ll.pdf
