--- a/input/hector_rcp45.ini
+++ b/input/hector_rcp45.ini
@@ -2,7 +2,7 @@
 [core]
 run_name=rcp45
 startDate=1745
-endDate=2100
+endDate=2300
 do_spinup=1			; if 1, spin up model before running (default=1)
 max_spinup=5000		; maximum steps allowed for spinup (default=2000)
 
@@ -24,8 +24,9 @@ tu  = 49000000         ; 4.9e7 high latitude overturning, m3/s
 twi = 12500000         ; 1.25e7 warm-intermediate exchange, m3/s
 tid = 200000000        ; 2.0e8 intermediate-deep exchange, m3/s
 
-;atm_ocean_constrain=csv:input/constraints/cmip5_oceanflux.csv		; some flux record
-k = 0.2            ; ocean heat uptake efficiency  (W/m2/K)
+;atm_ocean_constrain=csv:input/constraints/cmip5_oceanflux.csv		; arbitrary flux record
+k_int = 1.0           ; initial ocean heat uptake efficiency  (W/m2/K)
+T_inv = -0.5			 ; inverse temperature, used to calculate a variable heat uptake efficiency (1/K)
 
 [simpleNbox]
 ; Initial (preindustrial) carbon pools
