--- a/input/hector_rcp26.ini
+++ b/input/hector_rcp26.ini
@@ -25,9 +25,9 @@ twi = 12500000         ; 1.25e7 warm-intermediate exchange, m3/s
 tid = 200000000        ; 2.0e8 intermediate-deep exchange, m3/s
 	
 ;atm_ocean_constrain=csv:input/constraints/cmip5_oceanflux.csv		; some flux record
-k_int = 1.0            ; initial ocean heat uptake efficiency  (W/m2/K)
-T_inv = -0.5 			; inverse temperature, used to calculate a variable heat uptake efficiency (1/K)
-
+;k_int = 1.0            ; initial ocean heat uptake efficiency  (W/m2/K)
+;T_inv = -0.5 			; inverse temperature, used to calculate a variable heat uptake efficiency (1/K)
+k_int = 0.2 
 [simpleNbox]
 ; Initial (preindustrial) carbon pools
 atmos_c=588.071			; Pg C in CO2, from Murakami (2010) - could also specify as "C0=276", in ppmv
