--- a/input/hector_rcp26.ini
+++ b/input/hector_rcp26.ini
@@ -2,7 +2,7 @@
 [core]
 run_name=rcp26
 startDate=1745
-endDate=2100
+endDate=2300
 do_spinup=1			; if 1, spin up model before running (default=1)
 max_spinup=5000		; maximum steps allowed for spinup (default=2000)
 
@@ -23,11 +23,13 @@ tt  = 72000000         ; 7.2e7 thermohaline circulation, m3/s
 tu  = 49000000         ; 4.9e7 high latitude overturning, m3/s
 twi = 12500000         ; 1.25e7 warm-intermediate exchange, m3/s
 tid = 200000000        ; 2.0e8 intermediate-deep exchange, m3/s
-	
+
 ;atm_ocean_constrain=csv:input/constraints/cmip5_oceanflux.csv		; some flux record
-k_int = 1.2            ; initial ocean heat uptake efficiency  (W/m2/K)
-T_inv = -0.5 			; inverse temperature, used to calculate a variable heat uptake efficiency (1/K)
-;k_int = 0.5 
+
+; Ocean heat uptake parameters
+k_max=0.8				; max ocean heat uptake efficiency, W/m2/K
+t_mid=2.75				; global temperature at which k has declined by 50%
+
 [simpleNbox]
 ; Initial (preindustrial) carbon pools
 atmos_c=588.071			; Pg C in CO2, from Murakami (2010) - could also specify as "C0=276", in ppmv
