--- a/input/hector_rcp85.ini
+++ b/input/hector_rcp85.ini
@@ -24,9 +24,11 @@ tu  = 49000000         ; 4.9e7 high latitude overturning, m3/s
 twi = 12500000         ; 1.25e7 warm-intermediate exchange, m3/s
 tid = 200000000        ; 2.0e8 intermediate-deep exchange, m3/s
 
-;atm_ocean_constrain=csv:input/constraints/cmip5_oceanflux.csv		; arbitrary flux record
-k_int = -0.5            ; initial ocean heat uptake efficiency  (W/m2/K)
-T_inv = 1.0			 ; inverse temperature, used to calculate a variable heat uptake efficiency (1/K)
+;atm_ocean_constrain=csv:input/constraints/cmip5_oceanflux.csv		; some flux record
+
+; Ocean heat uptake parameters
+k_max=0.8				; max ocean heat uptake efficiency, W/m2/K
+t_mid=2.75				; global temperature at which k has declined by 50%
 
 [simpleNbox]
 ; Initial (preindustrial) carbon pools
