--- a/input/hector_rcp60.ini
+++ b/input/hector_rcp60.ini
@@ -29,6 +29,8 @@ tid = 200000000        ; 2.0e8 intermediate-deep exchange, m3/s
 ; Ocean heat uptake parameters
 k_max=0.8				; max ocean heat uptake efficiency, W/m2/K
 t_mid=2.75				; global temperature at which k has declined by 50%
+slope = -1.0  			; slope	of curve, 1/K
+k_min = 0.0				; min ocean heat uptake efficiency, W/m2/K
 
 [simpleNbox]
 ; Initial (preindustrial) carbon pools
