H0 from emissions to concentrations
for CH3Br and CH3Cl

--- a/input/hector_rcp60.ini
+++ b/input/hector_rcp60.ini
@@ -371,7 +371,7 @@ molarMass=100.45
 [CH3Cl_halocarbon]
 tau= 1.3
 rho= 0.00001
-H0 = 3100.21
+H0= 504.0		; preindustrial concentration, pptv from Saito et al 2007 Geophysical Reserach Letters
 CH3Cl_emissions= csv:input/emissions/RCP6_emissions.csv
 molarMass=50.45
 ;ni=1
@@ -380,7 +380,7 @@ molarMass=50.45
 [CH3Br_halocarbon]
 tau= 0.7
 rho= 0.00001
-H0 = 157.267
+H0=	5.8      	; preindustrial concentration, pptv from Saltzman et al 2004 Journal of Geophysical Research
 CH3Br_emissions= csv:input/emissions/RCP6_emissions.csv
 molarMass=94.9
 ;nj=1
