Added temperature constraint to ini files

--- a/input/hector_rcp60.ini
+++ b/input/hector_rcp60.ini
@@ -163,7 +163,7 @@ S=3.0 				; equilibrium climate sensitivity for 2xCO2, degC
 
 ; Optional global temperature constraint
 ; If supplied, the model will use these data, ignoring what it calculates
-;tgav_constrain=csv:input/cmip5_tgav_RCP6_test.csv
+tgav_constrain=csv:input/constraints/tgav_historical.csv
 
 ;------------------------------------------------------------------------
 [bc]
