Bonus values added to ini files for optimization

--- a/input/hector_rcp85.ini
+++ b/input/hector_rcp85.ini
@@ -163,8 +163,11 @@ S=3.0 				; equilibrium climate sensitivity for 2xCO2, degC
 
 ; Optional global temperature constraint
 ; If supplied, the model will use these data, ignoring what it calculates
-tgav_constrain=csv:input/constraints/tgav_historical.csv
-
+;tgav_constrain=csv:input/constraints/tgav_historical.csv
+bc_b=0.1 ; bc bonus
+oc_b=0.1 ; oc bonus
+so2i_b=0.1 ;so2i bonus
+so2d_b=0.1 ;so2d bonus
 ;------------------------------------------------------------------------
 [bc]
 BC_emissions=csv:input/emissions/RCP85_emissions.csv
