--- a/source/Makefile
+++ b/source/Makefile
@@ -3,7 +3,7 @@ CXXFLAGS = -g  $(INCLUDES) $(OPTFLAGS) $(CXXEXTRA) $(CXXPROF) $(WFLAGS) -MMD
 INCLUDES = -I$(BOOSTROOT) -I$(HDRDIR) -I$(GSLINC)
 WFLAGS   = -Wall -Wno-unused-local-typedefs # Turn on warnings, turn off one particularly annoying one that infests Boost libs
 OPTFLAGS = -O3
-LDFLAGS	 = $(CXXPROF) -L$(GSLLIB) -L.
+LDFLAGS	 = $(CXXPROF) -L$(GSLLIB) -L. -Wl,-rpath=$(GSLLIB)
 
 export CXXFLAGS OPTFLAGS
 
