Harmonize the two main() functions from parent branches and update Makefile accordingly.
The main.cpp from branch master is now the main for Hector.  The one
from gcam-devel has been retained for use in testing during
development, but its build target has been disabled in the Makefile.

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@
 *.out
 *.app
 source/hector
+source/hector-ext
 
 # Hector logs
 logs/*.*
@@ -57,6 +58,7 @@ libs/
 
 # Output
 output/output
+output/*.csv
 
 # R
 .Rhistory
