--- a/source/Makefile
+++ b/source/Makefile
@@ -54,9 +54,16 @@ OBJS	= $(SRCS:.cpp=.o)
 DEPS	= $(SRCS:.cpp=.d)
 
 ## default target
-hector: libhector.a $(OBJS)
-	$(CXX) $(LDFLAGS) -o hector $(OBJS) -lhector -lgsl -lgslcblas -lm
+hector: libhector.a main.o
+	$(CXX) $(LDFLAGS) -o hector main.o -lhector -lgsl -lgslcblas -lm
 
+## alternate version that uses the capabilities needed for driving
+## hector from an external source (e.g., an IAM) 
+## DO NOT BUILD THIS TARGET UNLESS YOU ARE TESTING HECTOR'S INTERNAL
+## PLUMBING.  It uses some hard-coded emissions for testing and likely
+## will not do what you want it to under all circumstances.
+# hector-ext: libhector.a main-ext.o
+# 	$(CXX) $(LDFLAGS) -o hector-ext main-ext.o -lhector -lgsl -lgslcblas -lm
 
 ## Targets that do not literally name files
 .PHONY: subdirs $(DIRS) clean test gtest
