--- a/input/hector-gcam.ini
+++ b/input/hector-gcam.ini
@@ -65,10 +65,10 @@ f_lucv=0.1			; Fraction of land use change flux from vegetation
 f_lucd=0.01			; Fraction of land use change flux from detritus
 
 ; Anthropogenic contributions: direct emissions, Pg (or Gt) C/yr
-anthroEmissions=csv:../input/climate/gcam_emissions.csv	; historical emissions data only. Future emissions will be provided by GCAM
+ffi_emissions=csv:../input/climate/gcam_emissions.csv	; historical emissions data only. Future emissions will be provided by GCAM
 
 ; Anthropogenic contributions: land use change
-lucEmissions=csv:../input/climate/gcam_emissions.csv 
+luc_emissions=csv:../input/climate/gcam_emissions.csv 
 
 ; CO2 and temperature effects on the carbon cycle
 ; these are global values, can optionally specify biome-specific ones as above
