Replace GSL algorithms including ODE integration with various libs from boost (header only).  This opens the door to release hector under different licenses that GPLv2.

--- a/project_files/VS/hector.vcxproj
+++ b/project_files/VS/hector.vcxproj
@@ -78,23 +78,23 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>..\..\libs\gsl;..\..\libs\boost-lib;$(IncludePath)</IncludePath>
-    <LibraryPath>..\..\libs\gsl\Debug;..\..\libs\boost-lib\stage\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>..\..\libs\boost-lib;$(IncludePath)</IncludePath>
+    <LibraryPath>..\..\libs\boost-lib\stage\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>..\..\libs\gsl;..\..\libs\boost-lib;$(IncludePath)</IncludePath>
-    <LibraryPath>..\..\libs\gsl\Debug;..\..\libs\boost-lib\stage\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>..\..\libs\boost-lib;$(IncludePath)</IncludePath>
+    <LibraryPath>..\..\libs\boost-lib\stage\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>..\..\libs\gsl;..\..\libs\boost-lib;$(IncludePath)</IncludePath>
-    <LibraryPath>..\..\libs\gsl\Release;..\..\libs\boost-lib\stage\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>..\..\libs\boost-lib;$(IncludePath)</IncludePath>
+    <LibraryPath>..\..\libs\boost-lib\stage\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>..\..\libs\gsl;..\..\libs\boost-lib;$(IncludePath)</IncludePath>
-    <LibraryPath>..\..\libs\gsl\Release;..\..\libs\boost-lib\stage\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>..\..\libs\boost-lib;$(IncludePath)</IncludePath>
+    <LibraryPath>..\..\libs\boost-lib\stage\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -110,7 +110,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>gsl.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -124,7 +124,7 @@
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
-      <AdditionalDependencies>gsl.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
@@ -146,7 +146,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>gsl.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -165,7 +165,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>gsl.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
