--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,18 @@
 language: cpp
 
 before_script:
-  - sudo apt-get update -qq
-  - sudo apt-get install libboost-dev libboost-filesystem-dev libboost-system-dev
+ - wget http://downloads.sourceforge.net/project/boost/boost/1.58.0/boost_1_58_0.tar.bz2\?r\=\&ts\=1435589970\&use_mirror\=garr -O /tmp/boost.tar.bz2
+ - tar jxf /tmp/boost.tar.bz2
+ - mv boost_1_58_0 $PWD/boost-trunk
+ - export BOOSTROOT="$PWD/boost-trunk"
+ - export BOOSTVERSION=1_58_0
+
+ - cd $BOOSTROOT
+ - ./bootstrap.sh --with-libraries=filesystem 
+ - cd $TRAVIS_BUILD_DIR
+
+#  - sudo apt-get update -qq
+#  - sudo apt-get install libboost-dev libboost-filesystem-dev libboost-system-dev
 
 script: 
  - make hector
