--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 # Build Hector on Travis CI
-# See 
+# See https://travis-ci.org/bpbond/hector
 
 language: cpp
 
@@ -15,6 +15,9 @@ before_script:
  - ./b2
  - cd $TRAVIS_BUILD_DIR
 
+# Code above is necessary because Travis's default Boost is 1_46_0
+# which doesn't include odeint and other stuff. Otherwise, we could
+# simple use the following lines:
 #  - sudo apt-get update -qq
 #  - sudo apt-get install libboost-dev libboost-filesystem-dev libboost-system-dev
 
