--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,12 @@
 language: cpp
 
 before_script:
- - wget http://downloads.sourceforge.net/project/boost/boost/1.58.0/boost_1_58_0.tar.bz2\?r\=\&ts\=1435589970\&use_mirror\=garr -O /tmp/boost.tar.bz2
+ - export BOOSTVERSION=1_62_0
+ - export BOOSTVERDIR=1.62.0
+ - wget http://downloads.sourceforge.net/project/boost/boost/${BOOSTVERDIR}/boost_${BOOSTVERSION}.tar.bz2\?r\=\&ts\=1435589970\&use_mirror\=garr -O /tmp/boost.tar.bz2
  - tar jxf /tmp/boost.tar.bz2
- - mv boost_1_58_0 $PWD/boost-trunk
+ - mv boost_$BOOSTVERSION $PWD/boost-trunk
  - export BOOSTROOT="$PWD/boost-trunk"
- - export BOOSTVERSION=1_58_0
 
  - cd $BOOSTROOT
  - ./bootstrap.sh --with-libraries=filesystem 
