--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@
 
 language: cpp
 
+#compiler:
+#  - clang
+#  - gcc
+
 before_script:
  - export BOOSTVERSION=1_62_0
  - export BOOSTVERDIR=1.62.0
@@ -24,4 +28,5 @@ before_script:
 
 script: 
  - make hector
- 
+ - ./source/hector input/hector_rcp45.ini
+
