--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 # Build Hector on Travis CI
+# BBL October 2016
 # See https://travis-ci.org/bpbond/hector
 
 language: cpp
 
-#compiler:
-#  - clang
-#  - gcc
+compiler:
+  - clang
+  - gcc
 
 before_script:
  - export BOOSTVERSION=1_62_0
