--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,10 @@ compiler:
   - clang
   - gcc
 
+branches:
+  only:
+  - master
+  
 before_script:
  - export BOOSTVERSION=1_62_0
  - export BOOSTVERDIR=1.62.0
