--- a/.travis.yml
+++ b/.travis.yml
@@ -33,5 +33,8 @@ before_script:
 
 script: 
  - make hector
+ - ./source/hector input/hector_rcp26.ini
  - ./source/hector input/hector_rcp45.ini
+ - ./source/hector input/hector_rcp60.ini
+ - ./source/hector input/hector_rcp85.ini
 
