--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,6 @@ compiler:
 branches:
   only:
   - master
-  - dev_doeclim
   
 before_script:
  - export BOOSTVERSION=1_62_0
@@ -34,5 +33,5 @@ before_script:
 
 script: 
  - make hector
- - ./source/hector input/hector_rcp45.ini
+ - ./test_hector.sh ./source/hector 
 
