--- a/input/hector_rcp26.ini
+++ b/input/hector_rcp26.ini
@@ -159,11 +159,22 @@ baseyear=1750		; when to start reporting; by definition, all F=0 in this year
 
 ;------------------------------------------------------------------------
 [temperature]
-S=3.0 				; equilibrium climate sensitivity for 2xCO2, degC
-
+enabled=0
+S=3.0 
 ; Optional global temperature constraint
 ; If supplied, the model will use these data, ignoring what it calculates
-;tgav_constrain=csv:constraints/tgav_historical.csv
+; tgav_constrain=csv:constraints/tgav_historical.csv
+
+;------------------------------------------------------------------------
+[temp_doeclim]
+enabled=1
+
+S=3.0 				; equilibrium climate sensitivity for 2xCO2, degC
+diff=2.3			; ocean heat diffusivity, cm2/s
+alpha=1.0     ; scaling factor for aerosol forcing
+; Optional global temperature constraint
+; If supplied, the model will use these data, ignoring what it calculates
+; tgav_constrain=csv:constraints/tgav_historical.csv
 
 ;------------------------------------------------------------------------
 [bc]
