enabled volcanic forcing in ini files

--- a/input/hector_rcp45.ini
+++ b/input/hector_rcp45.ini
@@ -102,7 +102,7 @@ eps_spinup=0.001	; spinup tolerance (drift), Pg C
 S0=53841.2 			; historical sulphate from year 2000 (Gg)
 SN=42000			; natural sulfur emissions (Gg)
 SO2_emissions=csv:emissions/RCP45_emissions.csv 	; emissions time series
-;SV=csv:emissions/volcanic_RF.csv   			  	; emissions time series
+SV=csv:emissions/volcanic_RF.csv   			  	; emissions time series
 
 ;------------------------------------------------------------------------
 [CH4]
