--- a/input/hector_rcp45.ini
+++ b/input/hector_rcp45.ini
@@ -152,7 +152,7 @@ baseyear=1750		; when to start reporting; by definition, all F=0 in this year
 ;Ftot_constrain=csv:constraints/MAGICC_RF_4.5.csv
 
 ;------------------------------------------------------------------------
-[temp_doeclim]
+[temperature]
 enabled=1
 
 S=3.0 				; equilibrium climate sensitivity for 2xCO2, degC
