--- a/input/hector-gcam.ini
+++ b/input/hector-gcam.ini
@@ -39,13 +39,6 @@ tu  = 49000000         ; 4.9e7 high latitude overturning, m3/s
 twi = 12500000         ; 1.25e7 warm-intermediate exchange, m3/s
 tid = 200000000        ; 2.0e8 intermediate-deep exchange, m3/s
 
-; Ocean heat uptake parameters
-k_max=0.3			; max ocean heat uptake efficiency, W/m2/K
-t_mid=2.75			; global temperature at which k has declined by 50%
-slope=1.0   		; slope	of curve, 1/K (0 means constant k_max)
-k_min=0.1			; min ocean heat uptake efficiency, W/m2/K
-
-
 [simpleNbox]
 ; Initial (preindustrial) carbon pools
 atmos_c=588.071			; Pg C in CO2, from Murakami (2010)
@@ -141,7 +134,14 @@ N2O_emissions=csv:../input/climate/gcam_emissions.csv   ; emissions time series
 baseyear=1750			; when to start reporting; by definition, all F=0 in this year
 
 [temperature]
+enabled=1
+
 S=3.0 				; equilibrium climate sensitivity for 2xCO2, degC
+diff=2.3			; ocean heat diffusivity, cm2/s
+alpha=1.0     ; scaling factor for aerosol forcing
+; Optional global temperature constraint
+; If supplied, the model will use these data, ignoring what it calculates
+; tgav_constrain=csv:constraints/tgav_historical.csv
 
 [bc]
 BC_emissions=csv:../input/climate/gcam_emissions.csv
