--- a/.gitignore
+++ b/.gitignore
@@ -6,21 +6,17 @@
 
 # make dependency files
 *.d
-
 # emacs backup files
 *~
-
 # Compiled Dynamic libraries
 *.so
 *.dylib
 *.dll
-
 # Compiled Static libraries
 *.lai
 *.la
 *.a
 *.lib
-
 # Executables
 *.exe
 *.out
@@ -28,15 +24,12 @@
 src/hector
 src/hector-ext
 src/hector-api
-
 # Hector logs
 logs/*.*
-
 # OS-specific files
 .DS_Store
 .Trashes
 *.swp
-
 # Xcode build directories, schemes, and interface state
 *.lock
 *.xccheckout
@@ -46,7 +39,6 @@ DerivedData/
 xcodeuserstate
 xcuserdata
 project.xcworkspace/
-
 # Project files
 project_files/*.*
 Release
@@ -60,13 +52,12 @@ libs/
 *.kdev4
 *.sdf
 *.suo
-
 # Output
 output/output*
-
 # R
 .Rhistory
 R/batchrunner/*.pdf
 R/batchrunner/*.csv
 .Rapp.history
-
+.Rproj.user
+.RData
