--- a/src/makefile.standalone
+++ b/src/makefile.standalone
@@ -40,7 +40,9 @@ export GTLIB GTINC
 ## sources in the top level directory
 CXXSRCS	= $(wildcard *.cpp)
 MAINS   = main.cpp main-api.cpp
+RCPPS   = $(wildcard rcpp_*.cpp)
 CXXSRCS := $(filter-out $(MAINS), $(CXXSRCS))
+CXXSRCS := $(filter-out $(RCPPS), $(CXXSRCS))
 CSRCS   = $(wildcard *.c)
 OBJS	= $(CXXSRCS:.cpp=.o) $(CSRCS:.c=.o) 
 DEPS	= $(CXXSRCS:.cpp=.d) $(CSRCS:.c=.d)
