Add R binding for sendmessage function.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(getdate)
 export(isactive)
 export(newcore)
 export(run)
+export(sendmessage)
 export(shutdown)
 export(startdate)
 importFrom(Rcpp,sourceCpp)
