--- a/.travis.yml
+++ b/.travis.yml
@@ -12,27 +12,22 @@ branches:
   only:
   - master
   - rc1.2
+
+addons:
+  apt:
+    sources:
+      - boost-latest
+    packages:
+      - libboost-system1.55-dev
+      - libboost-filesystem1.55-dev
   
+# BOOSTROOT is set to look for header files in the default place where Ubuntu apt will install them -- i.e. /usr/include/x86_64-linux-gnu. This is set because the Makefile has a `-I$(BOOSTROOT)` call.
+#
+# Similarly, BOOSTLIB is set to /usr/lib/x86_64-linux-gnu, which is where Ubuntu apt installs boost by default. It has to be specified in full because otherwise, Hector's Makefile tries to construct BOOSTLIB by appending `/lib` to BOOSTROOT, which will not work here because of the `x86_64-linux-gnu` addition.
 before_script:
- - export BOOSTVERSION=1_62_0
- - export BOOSTVERDIR=1.62.0
- - wget http://downloads.sourceforge.net/project/boost/boost/${BOOSTVERDIR}/boost_${BOOSTVERSION}.tar.bz2\?r\=\&ts\=1435589970\&use_mirror\=garr -O /tmp/boost.tar.bz2
- - tar jxf /tmp/boost.tar.bz2
- - mv boost_$BOOSTVERSION $PWD/boost-trunk
- - export BOOSTROOT="$PWD/boost-trunk"
-
- - cd $BOOSTROOT
- - ./bootstrap.sh --with-libraries=filesystem 
- - ./b2
- - cd $TRAVIS_BUILD_DIR
-
-# Code above is necessary because Travis's default Boost is 1_46_0
-# which doesn't include odeint and other stuff. Otherwise, we could
-# simple use the following lines:
-#  - sudo apt-get update -qq
-#  - sudo apt-get install libboost-dev libboost-filesystem-dev libboost-system-dev
+ - export BOOSTROOT=/usr/include/x86_64-linux-gnu/
+ - export BOOSTLIB=/usr/lib/x86_64-linux-gnu/
 
 script: 
  - make hector
  - ./test_hector.sh ./source/hector 
-
