--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,11 +2,194 @@
 
 S3method(format,hcore)
 S3method(print,hcore)
+export(AERO_SCALE)
+export(ATMOSPHERIC_C)
+export(ATMOSPHERIC_CH4)
+export(ATMOSPHERIC_CO2)
+export(ATMOSPHERIC_C_RESIDUAL)
+export(ATMOSPHERIC_EM_CH4)
+export(ATMOSPHERIC_N2O)
+export(ATMOSPHERIC_O3)
+export(ATM_OCEAN_CONSTRAIN)
+export(ATM_OCEAN_FLUX_HL)
+export(ATM_OCEAN_FLUX_LL)
+export(BC_B)
+export(BETA)
+export(CARBON_DO)
+export(CARBON_HL)
+export(CARBON_IO)
+export(CARBON_LL)
+export(CA_CONSTRAIN)
+export(CIRC_T50_HIGH)
+export(CIRC_T50_LOW)
+export(CIRC_TOPT)
+export(CO2FERT)
+export(CO3_HL)
+export(CO3_LL)
+export(COEFFICIENT_CH4)
+export(COEFFICIENT_CO)
+export(COEFFICIENT_NMVOC)
+export(COEFFICIENT_NOX)
+export(CONVERSION_CH4)
+export(CONVERSION_N2O)
+export(D2000_SO2)
+export(DETRITUSC)
+export(DIC_HL)
+export(DIC_LL)
+export(DIFFUSIVITY)
+export(EARTHC)
+export(ECS)
+export(EMISSIONS_BC)
+export(EMISSIONS_C2F6)
+export(EMISSIONS_CCL4)
+export(EMISSIONS_CF4)
+export(EMISSIONS_CFC11)
+export(EMISSIONS_CFC113)
+export(EMISSIONS_CFC114)
+export(EMISSIONS_CFC115)
+export(EMISSIONS_CFC12)
+export(EMISSIONS_CH3BR)
+export(EMISSIONS_CH3CCL3)
+export(EMISSIONS_CH3CL)
+export(EMISSIONS_CH4)
+export(EMISSIONS_CO)
+export(EMISSIONS_HALON1211)
+export(EMISSIONS_HALON1301)
+export(EMISSIONS_HALON2402)
+export(EMISSIONS_HCF141B)
+export(EMISSIONS_HCF142B)
+export(EMISSIONS_HCF22)
+export(EMISSIONS_HFC125)
+export(EMISSIONS_HFC134A)
+export(EMISSIONS_HFC143A)
+export(EMISSIONS_HFC227EA)
+export(EMISSIONS_HFC23)
+export(EMISSIONS_HFC245FA)
+export(EMISSIONS_HFC32)
+export(EMISSIONS_HFC4310)
+export(EMISSIONS_N2O)
+export(EMISSIONS_NMVOC)
+export(EMISSIONS_NOX)
+export(EMISSIONS_OC)
+export(EMISSIONS_SF6)
+export(EMISSIONS_SO2)
+export(FFI_EMISSIONS)
+export(FLUX_INTERIOR)
+export(FLUX_MIXED)
+export(F_LITTERD)
+export(F_LUCD)
+export(F_LUCV)
+export(F_NPPD)
+export(F_NPPV)
+export(GETDATA)
+export(GLOBAL_TEMP)
+export(GLOBAL_TEMPEQ)
+export(HC_CONCENTRATION)
+export(HC_EMISSION)
+export(HEAT_FLUX)
+export(HL_DO)
+export(INITIAL_LIFETIME_N2O)
+export(INITIAL_LIFETIME_OH)
+export(LAND_CFLUX)
+export(LIFETIME_N2O)
+export(LIFETIME_OH)
+export(LIFETIME_SOIL)
+export(LIFETIME_STRAT)
 export(LL_DEBUG)
 export(LL_NOTICE)
 export(LL_SEVERE)
 export(LL_WARNING)
+export(LUC_EMISSIONS)
+export(NATURAL_CH4)
+export(NATURAL_SO2)
+export(NAT_EMISSIONS_N2O)
+export(NPP)
+export(NPP_FLUX0)
+export(OCEAN_C)
+export(OCEAN_CFLUX)
+export(OC_B)
+export(OMEGAAR_HL)
+export(OMEGAAR_LL)
+export(OMEGACA_HL)
+export(OMEGACA_LL)
+export(P0_LL)
+export(PCO2_HL)
+export(PCO2_LL)
+export(PH_HL)
+export(PH_LL)
+export(PREINDUSTRIAL_CH4)
+export(PREINDUSTRIAL_CO2)
+export(PREINDUSTRIAL_HC)
+export(PREINDUSTRIAL_N2O)
+export(PREINDUSTRIAL_O3)
+export(Q10_RH)
+export(REVELLE_HL)
+export(REVELLE_LL)
+export(RF_BC)
+export(RF_C2F6)
+export(RF_CCL4)
+export(RF_CF4)
+export(RF_CFC11)
+export(RF_CFC113)
+export(RF_CFC114)
+export(RF_CFC115)
+export(RF_CFC12)
+export(RF_CH3BR)
+export(RF_CH3CCL3)
+export(RF_CH3CL)
+export(RF_CH4)
+export(RF_CO2)
+export(RF_H2O)
+export(RF_HALOCARBONS)
+export(RF_HALON1211)
+export(RF_HALON1301)
+export(RF_HALON2402)
+export(RF_HCF141B)
+export(RF_HCF142B)
+export(RF_HCF22)
+export(RF_HFC125)
+export(RF_HFC134A)
+export(RF_HFC143A)
+export(RF_HFC227EA)
+export(RF_HFC23)
+export(RF_HFC245FA)
+export(RF_HFC32)
+export(RF_HFC4310)
+export(RF_N2O)
+export(RF_O3)
+export(RF_OC)
+export(RF_SF6)
+export(RF_SO2)
+export(RF_SO2D)
+export(RF_SO2I)
+export(RF_TOTAL)
+export(RF_T_ALBEDO)
+export(RF_VOL)
+export(RH)
+export(SETDATA)
+export(SLR)
+export(SLR_NO_ICE)
+export(SL_RC)
+export(SL_RC_NO_ICE)
+export(SO2D_B)
+export(SO2I_B)
+export(SOILC)
+export(SPINUP_CHEM)
+export(TEMPFERTD)
+export(TEMPFERTS)
+export(TEMP_HL)
+export(TEMP_LL)
+export(TGAV_CONSTRAIN)
+export(TID)
+export(TIMESTEPS)
+export(TT)
+export(TU)
+export(TWI)
+export(VEGC)
+export(VOLCANIC_SO2)
+export(WARMINGFACTOR)
 export(enddate)
+export(fetchvars)
 export(getdate)
 export(isactive)
 export(newcore)
