Add reset function to public interface.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -193,6 +193,7 @@ export(fetchvars)
 export(getdate)
 export(isactive)
 export(newcore)
+export(reset)
 export(run)
 export(sendmessage)
 export(shutdown)
