Add tests for R bindings.
For the time being, the CI is still running the test script for the
stand-alone version of Hector, so these tests have to be run
manually.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -196,6 +196,7 @@ export(newcore)
 export(reset)
 export(run)
 export(sendmessage)
+export(setvar)
 export(shutdown)
 export(startdate)
 importFrom(Rcpp,sourceCpp)
