--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,10 +4,15 @@ Version: 0.0.0.9000
 Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
 Description: What the package does (one paragraph).
 Depends: R (>= 3.3.3)
-License: What license is it under?
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
 LinkingTo: Rcpp
 Imports: Rcpp
 RoxygenNote: 6.0.1
 Suggests: testthat
+Collate: 
+    'aadoc.R'
+    'RcppExports.R'
+    'hector.R'
+    'messages.R'
